--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   animated_text_kit: ^2.5.4
   flutter_spinkit: ^4.1.2
   rive: ^0.6.3
+  configurable_expansion_tile: ^1.0.0
 
 dev_dependencies:
   flutter_test:
