--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_html: ^1.1.1
   provider: ^4.3.2+3
   tuple: ^1.0.3
+  smooth_page_indicator: ^0.2.0
 
 dev_dependencies:
   flutter_test:
